# rs-java-protobuf-demo

./: pom.xml
java-protobuf-demo/: pom.xml
java-protobuf-demo/src/main/java/org/demo/protobuf/: DemoApplication.java  HelloWorldController.java  PhoneNumJson.java  ProtobufMessage.java  StudentJson.java  StudentOrBuilder.java  StudentPb.java
java-protobuf-demo/src/main/java/org/demo/protobuf/config/: Config.java
java-protobuf-demo/src/main/resources/: mxsm.proto  student.proto
java-protobuf-demo/src/test/java/org/demo/protobuf/: ApplicationTest.java  ProtobufExample.java  TcpProtobufClient.java
proto-java-demo/: pom.xml
proto-java-demo/proto-java-client/: pom.xml
proto-java-demo/proto-java-client/src/main/java/org/demo/protobuf/: HelloReply.java  HelloRequest.java  HelloRequestOrBuilder.java  Student.java  StudentOrBuilder.java  StudentOuterClass.java
proto-rs-server/: Cargo.toml  build.rs
proto-rs-server/examples/: bytes_mut_reserve_advance_mut.rs  path_example.rs  rs_tcp_server.rs  server_with_codec.rs
proto-rs-server/src/: lib.rs  main.rs  main.rs2
proto-rs-server/src/net/: frame.rs  mod.rs  proto_stream.rs
proto-rs-server/src/pb/: mod.rs  student.rs
protobuf-demo/: pom.xml
protobuf-demo/proto-java-client/: pom.xml
protobuf-demo/proto-java-client/src/main/java/org/demo/protobuf/: HelloReply.java  HelloReplyOrBuilder.java  HelloRequest.java  (+1 more)
rs-protobuf-demo/: build.rs
rs-protobuf-demo/examples/: client.rs  path_example.rs  server_with_codec.rs
rs-protobuf-demo/protos/: mxsm.proto
rs-protobuf-demo/src/pb/: mod.rs  student.rs
(+1 files in other folders)
