[package]
name = "rs-protobuf-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.13.1"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13.1"
anyhow = "1.0.86"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-prost = "0.2.1"
tokio-util = { version = "0.7.11", features = ["codec"]}

[build-dependencies]
prost-build = "0.13.1" # 编译 protobuf
